--- a/my-app/src/components/Cockpit/Cockpit.css
+++ b/my-app/src/components/Cockpit/Cockpit.css
@@ -6,7 +6,30 @@
     font-weight: bold;
   }
   
-  .Cockpit button {
+  .Button {
+    border: 1px solid blue;
+    padding: 16px;
+    background-color: green;
+    font: inherit;
+    color: white;
+    cursor: pointer;
+  }
+  
+  Button:hover {
+    background-color: lightgreen;
+    color: black;
+  }
+  
+  .Button.Red {
+    background-color: red;
+  }
+  
+  .Button.Red:hover {
+    background-color: salmon;
+    color: black;
+  }
+
+  /* .Cockpit button {
     border: 1px solid blue;
     padding: 16px;
     background-color: green;
@@ -27,4 +50,4 @@
   .Cockpit button.Red:hover {
     background-color: salmon;
     color: black;
-  }
+  } */
